# Zoey

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml  LICENSE  README.md  deny.toml  ecosystem.config.js  package-lock.json  test_unmute_realtime.rs
crates/adaptors/zoey-adaptor-discord/: Cargo.toml
crates/adaptors/zoey-adaptor-discord/src/: lib.rs  voice.rs
crates/adaptors/zoey-adaptor-telegram/: Cargo.toml
crates/adaptors/zoey-adaptor-telegram/src/: lib.rs  voice.rs
crates/adaptors/zoey-adaptor-web/: Cargo.toml
crates/adaptors/zoey-adaptor-web/src/: lib.rs
crates/core/zoey-core/: Cargo.toml  README.md
crates/core/zoey-core/benches/: performance.rs
crates/core/zoey-core/examples/: rest_server.rs
crates/core/zoey-core/src/: actions.rs  character_loader.rs  config.rs  distributed.rs  dynamic_prompts.rs  entities.rs  error.rs  extensions.rs  function_calling.rs  integration.rs  ipo.rs  lib.rs  message.rs  ml_bridge.rs  multi_agent.rs  plugin.rs  preprocessor.rs  resilience.rs  roles.rs  runtime_ref.rs  secrets.rs  security.rs  streaming.rs  templates.rs  testing.rs  training.rs  utils.rs  zoeyos.rs
crates/core/zoey-core/src/agent_api/: auth.rs  handlers.rs  mod.rs  server.rs  state.rs  task.rs  tests.rs  types.rs
crates/core/zoey-core/src/detectors/: mod.rs
crates/core/zoey-core/src/infrastructure/: batch.rs  key_rotation.rs  mod.rs  otel.rs  rate_limiting.rs  sanitization.rs  secure_defaults.rs  shutdown.rs  tracing.rs  webhooks.rs
crates/core/zoey-core/src/nlp/: entities.rs  keywords.rs  mod.rs  phonetic.rs  similarity.rs
crates/core/zoey-core/src/observability/: config.rs  cost_tracker.rs  mod.rs  rest.rs  security_monitor.rs  types.rs
crates/core/zoey-core/src/pipeline/: context.rs  mod.rs  mps.rs  mps_tests.rs  phases.rs  profiler.rs  types.rs
crates/core/zoey-core/src/planner/: budget.rs  chain_of_thought.rs  complexity.rs  cost.rs  emoji.rs  knowledge.rs  metrics.rs  mod.rs  optimization.rs  teacher.rs  tokens.rs
crates/core/zoey-core/src/plugin_system/: mod.rs  registry.rs  resolver.rs  traits.rs
crates/core/zoey-core/src/runtime/: events.rs  executor.rs  legacy.rs  lifecycle.rs  mod.rs  state.rs
crates/core/zoey-core/src/tests/: delayed_reassessment_tests.rs  detectors_tests.rs  phase0_tests.rs
crates/core/zoey-core/src/types/: agent.rs  mod.rs  (+17 more)
crates/extensions/zoey-ext-workflow/: Cargo.toml  README.md
crates/extensions/zoey-ext-workflow/examples/: patient_intake.yaml
crates/extensions/zoey-ext-workflow/src/: action.rs  conditionals.rs  context.rs  distributed.rs  engine.rs  executor.rs  lib.rs  pipeline.rs  plugin.rs  provider.rs  resources.rs  scheduler.rs  storage.rs  task.rs  validation.rs  workflow.rs
crates/plugins/zoey-plugin-bootstrap/: Cargo.toml  README.md
crates/plugins/zoey-plugin-bootstrap/src/: lib.rs
crates/plugins/zoey-plugin-hardware/: Cargo.toml
crates/plugins/zoey-plugin-hardware/src/: detector.rs  lib.rs  optimizer.rs
crates/plugins/zoey-plugin-knowledge/: Cargo.toml  README.md
crates/plugins/zoey-plugin-knowledge/benches/: retrieval.rs
crates/plugins/zoey-plugin-knowledge/src/: lib.rs  plugin.rs
crates/plugins/zoey-plugin-lifeengine/: Cargo.toml  README.md
crates/plugins/zoey-plugin-lifeengine/src/: lib.rs
crates/plugins/zoey-plugin-memory/: Cargo.toml
crates/plugins/zoey-plugin-memory/src/: evaluators.rs  lib.rs  plugin.rs  provider.rs  service.rs
crates/plugins/zoey-plugin-moderation/: Cargo.toml
crates/plugins/zoey-plugin-moderation/src/: lib.rs  plugin.rs
crates/plugins/zoey-plugin-observability/: Cargo.toml  README.md
crates/plugins/zoey-plugin-observability/src/: audit_log.rs  confidence.rs  counterfactual.rs  lib.rs  plugin.rs  reasoning_chain.rs  source_attribution.rs
crates/plugins/zoey-plugin-rag-connectors/: Cargo.toml
crates/plugins/zoey-plugin-rag-connectors/src/: connectors.rs  lib.rs  plugin.rs
crates/plugins/zoey-plugin-scheduler/: Cargo.toml
crates/plugins/zoey-plugin-scheduler/src/: lib.rs  plugin.rs
crates/plugins/zoey-plugin-search/: Cargo.toml
crates/plugins/zoey-plugin-search/src/: lib.rs  plugin.rs
crates/plugins/zoey-plugin-x402-video/: Cargo.toml  README.md
crates/plugins/zoey-plugin-x402-video/src/: lib.rs  routes.rs
crates/plugins/zoey-plugin-x402-video/tests/: e2e_api.rs  e2e_video.rs  e2e_x402.rs  integration_real_facilitator.rs
crates/providers/zoey-provider-local/: Cargo.toml  README.md
crates/providers/zoey-provider-local/src/: lib.rs  router.rs
crates/providers/zoey-provider-redpill/: Cargo.toml
crates/providers/zoey-provider-redpill/src/: lib.rs
crates/providers/zoey-provider-router/: Cargo.toml  README.md
crates/providers/zoey-provider-router/src/: lib.rs
crates/providers/zoey-provider-voice/: Cargo.toml
crates/providers/zoey-provider-voice/src/: lib.rs  types.rs
crates/providers/zoey-provider-voice/voices/: .gitignore
crates/storage/zoey-storage-mongo/: Cargo.toml  README.md
crates/storage/zoey-storage-mongo/benches/: database_performance.rs
crates/storage/zoey-storage-mongo/src/: lib.rs  mongo.rs  vector_search.rs
crates/storage/zoey-storage-mongo/tests/: README.md  mongo_integration_tests.rs
crates/storage/zoey-storage-sql/: Cargo.toml  README.md
crates/storage/zoey-storage-sql/benches/: database_performance.rs
crates/storage/zoey-storage-sql/src/: hipaa.rs  lib.rs  postgres.rs  sqlite.rs  vector_search.rs
crates/storage/zoey-storage-sql/tests/: README.md  plugin_migrations_sqlite.rs  postgres_integration_tests.rs  sqlite_integration_tests.rs
crates/storage/zoey-storage-supabase/: Cargo.toml  README.md
crates/storage/zoey-storage-supabase/benches/: database_performance.rs
crates/storage/zoey-storage-supabase/src/: lib.rs  supabase.rs  vector_search.rs
crates/storage/zoey-storage-supabase/tests/: README.md  supabase_integration_tests.rs
crates/storage/zoey-storage-vector/: Cargo.toml  README.md
crates/storage/zoey-storage-vector/src/: lib.rs  store.rs
run-agent-ui/: Cargo.toml
tools/generate-config/: Cargo.toml  EXAMPLES.md  README.md
tools/generate-config/src/: main.rs
(+139 files in other folders)
