[package]
name = "generate-config"
version = "0.1.0"
edition = "2021"
authors = ["ZoeyAI Contributors"]
description = "Security configuration generator for ZoeyAI"

[[bin]]
name = "generate-config"
path = "src/main.rs"

[dependencies]
rand = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

