[package]
name = "zoey-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ZoeyAI core runtime and types — agent framework optimized for local models"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID
uuid = { workspace = true }

# Crypto
sha2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

# Template engine
handlebars = { workspace = true }

# Utilities
chrono = { workspace = true }
names = "0.14"
once_cell = "1.19"
regex = "1.10"
hex = "0.4"
url = "2.5"

# Document parsing (for knowledge ingestion)
pdf-extract = "0.7"
calamine = "0.26"

# Text processing (for BM25 retrieval)
rust-stemmers = "1.2"

# Environment variables
dotenvy = { workspace = true }

# Observability
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-openai = "0.24"

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies.opentelemetry]
version = "0.23"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.23"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.16"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.23"
optional = true

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.13"
zoey-plugin-bootstrap = { path = "../../plugins/zoey-plugin-bootstrap" }
zoey-storage-sql = { path = "../../storage/zoey-storage-sql" }
zoey-provider-openai = { path = "../../providers/zoey-provider-openai" }
zoey-provider-anthropic = { path = "../../providers/zoey-provider-anthropic" }
zoey-provider-local = { path = "../../providers/zoey-provider-local" }
zoey-plugin-memory = { path = "../../plugins/zoey-plugin-memory" }

[[bench]]
name = "performance"
harness = false

[lib]
name = "zoey_core"
path = "src/lib.rs"

[[example]]
name = "basic_agent"
path = "../../../examples/basic_agent.rs"

[[example]]
name = "standard_agent"
path = "../../../examples/standard_agent.rs"

[[example]]
name = "advanced_agent"
path = "../../../examples/advanced_agent.rs"

[[example]]
name = "multi_agent_coordination"
path = "../../../examples/multi_agent_coordination.rs"

[[example]]
name = "interactive_agent"
path = "../../../examples/interactive_agent.rs"

[[example]]
name = "dynamic_prompts_example"
path = "../../../examples/dynamic_prompts_example.rs"
