[package]
name = "zoey-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ZoeyOS Contributors"]
repository = "https://github.com/Agent-Zoey/Zoey"
homepage = "https://github.com/Agent-Zoey/Zoey"
documentation = "https://docs.rs/zoey-core"
description = "ZoeyAI core runtime and types — privacy-first AI agent framework optimized for local models"
readme = "README.md"
keywords = ["ai", "agents", "local-models", "ollama", "privacy"]
categories = ["asynchronous", "development-tools"]

[dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
argon2 = "0.5"
rand = "0.8"

# Template engine
handlebars = "6.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
names = "0.14"
once_cell = "1.19"
regex = "1.10"
hex = "0.4"
url = "2.5"

# Document parsing (for knowledge ingestion)
pdf-extract = "0.7"
calamine = "0.26"

# Text processing (for BM25 retrieval)
rust-stemmers = "1.2"

# Environment variables
dotenvy = "0.15"

# Observability
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-openai = "0.24"

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies.opentelemetry]
version = "0.23"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.23"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.16"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.23"
optional = true

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.13"

[[bench]]
name = "performance"
harness = false

[lib]
name = "zoey_core"
path = "src/lib.rs"
