[package]
name = "zoey-ext-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workflow orchestration for ZoeyAI - task automation, pipelines, and process management"

[dependencies]
# Workspace dependencies
zoey-core = { path = "../../core/zoey-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Utilities
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.13"
