[package]
name = "zoey-plugin-hardware"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hardware detection and optimization plugin for ZoeyAI"

[dependencies]
zoey-core = { path = "../../core/zoey-core" }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"

# Hardware detection
sysinfo = "0.32"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
