[package]
name = "zoey-plugin-rag-connectors"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RAG connectors for ZoeyAI: GitHub, Notion, Drive, and web crawl"

[dependencies]
zoey-core = { path = "../../core/zoey-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
