[package]
name = "zoey-plugin-scheduler"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scheduler for ZoeyAI: tasks, reminders, per-user timezone"

[dependencies]
zoey-core = { path = "../../core/zoey-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

