[package]
name = "zoey-provider-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM provider router for ZoeyAI - round-robin, least-loaded, capability/cost-based with rate-limit awareness"

[dependencies]
zoey-core = { path = "../../core/zoey-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
[lib]
name = "zoey_provider_router"
path = "src/lib.rs"
