[package]
name = "zoey-storage-vector"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local vector database plugin for ZoeyAI — no PostgreSQL required"

[dependencies]
zoey-core = { version = "0.1.0", path = "../../core/zoey-core" }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"

# HNSW vector search
hnsw_rs = "0.3"
ndarray = "0.16"

# Persistence
bincode = "1.3"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
